i18n/versioned_docs/ja-jp/docusaurus-plugin-content-docs/version-3.8/scalardl-benchmarks/README.mdx
---
tags:
  - Community
  - Enterprise
---

# ScalarDL ベンチマークツール

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import TranslationBanner from '/src/components/_translation-ja-jp.mdx';

<TranslationBanner />

このチュートリアルでは、ScalarDL のベンチマークツールを実行する方法について説明します。ベンチマークは、一連の標準に対してシステムがどのように動作するかを評価するのに役立ちます。

## ワークロードのベンチマーク

- SmallBank
- TPC-C (新規注文および支払いトランザクションのみ)
- YCSB (ワークロード A、C、および F)

## 前提条件

- 次の Java Development Kit (JDK) のいずれか:
   - [Oracle JDK](https://www.oracle.com/java/technologies/downloads/) LTS バージョン 8
   - [OpenJDK](https://openjdk.org/install/) LTS バージョン 8
- Gradle
- [Kelpie](https://github.com/scalar-labs/kelpie)
   - Kelpie は、システムのベンチマークや検証などのエンドツーエンドのテストを実行するためのフレームワークです。[Kelpie Releases](https://github.com/scalar-labs/kelpie/releases) から最新バージョンを入手し、アーカイブファイルを解凍します。

:::note

現在、ベンチマークツールを実行するときに使用できるのは JDK 8 のみです。

:::

### 環境をセットアップする

ベンチマークツールには次のものが必要です。

- ベンチマークを実行するクライアント
- 対象の Ledger サーバー
- ターゲット Auditor サーバー (オプション)

上記のコンポーネントをセットアップし、次のスタートガイドに従ってクライアント、Ledger、および Auditor  (オプション) のプロパティを設定します。

- [Ledger のみの構成](../getting-started.mdx)
- [Ledger と Auditor の構成](../getting-started-auditor.mdx)

:::note

Client SDK をダウンロードして証明書を手動で登録する必要はありません。このチュートリアルで後ほど説明するように、ベンチマークツールは必要な証明書とコントラクトを自動的に登録します。

:::

## ベンチマークツールをセットアップする

次のセクションでは、ベンチマークツールのセットアップ方法について説明します。

### ScalarDL ベンチマークリポジトリのクローンを作成します。

**ターミナル**を開き、次のコマンドを実行して ScalarDL ベンチマークリポジトリのクローンを作成します。

```console
git clone https://github.com/scalar-labs/scalardl-benchmarks
```

次に、以下のコマンドを実行して、ベンチマークファイルが含まれるディレクトリに移動します。

```console
cd scalardl-benchmarks
```

### クライアント SDK バージョンの変更

[ScalarDL と Client SDK の互換性](../compatibility.mdx) に基づいて、ScalarDL Java Client SDK のバージョンが対象の ScalarDL Ledger および Auditor でサポートされているバージョンであるかどうかを `build.gralde` ファイルで確認します。サポートされていない場合は、`build.gradle` ファイル内の次の部分の `<VERSION>` を `X.Y.Z` のようなバージョン (たとえば `3.9.4`) に変更します。

```gradle
dependencies {
    implementation group: 'com.google.inject', name: 'guice', version: '5.0.1'
    implementation group: 'com.scalar-labs', name: 'kelpie', version: '1.2.3'
    implementation group: 'com.scalar-labs', name: 'scalardl-java-client-sdk', version: '<VERSION>'
    implementation group: 'io.github.resilience4j', name: 'resilience4j-retry', version: '1.3.1'
}
```

### ツールを構築する

ベンチマークツールを構築するには、次のコマンドを実行します。

```console
./gradlew shadowJar
```

### ベンチマーク設定ファイルを準備する

ベンチマークを実行するには、ベンチマーク設定ファイルを準備する必要があります。設定ファイルには、少なくとも実行するワークロードモジュールの場所とクライアント設定が必要です。

以下は、TPC-C ベンチマークを実行するための設定例です。`client_config` の下の設定は、[以前にセットアップしたベンチマーク環境](#環境をセットアップする)と一致する必要があります。

:::note

あるいは、 `.toml` ファイルで各クライアント設定項目を指定する代わりに、ScalarDL クライアントプロパティファイルを使用することもできます。`config_file` が指定されている場合 (以下でコメントアウトされています)、`client_config` の下にある他のすべての設定は無視されます。

:::

```toml
[modules]
[modules.preprocessor]
name = "com.scalar.dl.benchmarks.tpcc.TpccLoader"
path = "./build/libs/scalardl-benchmarks-all.jar"
[modules.processor]
name = "com.scalar.dl.benchmarks.tpcc.TpccBench"
path = "./build/libs/scalardl-benchmarks-all.jar"
[modules.postprocessor]
name = "com.scalar.dl.benchmarks.tpcc.TpccReporter"
path = "./build/libs/scalardl-benchmarks-all.jar"

[client_config]
config_file = "/<PATH_TO>/client.properties"
#ledger_host = "localhost"
#auditor_host = "localhost"
#auditor_enabled = "true"
#cert_holder_id = "test_holder"
#certificate = "/<PATH_TO>/client.pem"
#private_key = "/<PATH_TO>/client-key.pem"
```

設定ファイル内のモジュールに渡すパラメータを定義できます。詳細については、以下のサンプル設定ファイルと、[共通パラメータ](#共通パラメータ)で使用可能なパラメータを参照してください。

- **SmallBank:** [`smallbank-benchmark-config.toml`](https://github.com/scalar-labs/scalardl-benchmarks/blob/master/smallbank-benchmark-config.toml)
- **TPC-C:** [`tpcc-benchmark-config.toml`](https://github.com/scalar-labs/scalardl-benchmarks/blob/master/tpcc-benchmark-config.toml)
- **YCSB:** [`ycsb-benchmark-config.toml`](https://github.com/scalar-labs/scalardl-benchmarks/blob/master/ycsb-benchmark-config.toml)

## ベンチマークを実行する

ベンチマークを選択し、コマンドに従ってベンチマークを実行します。

<Tabs groupId="benchmarks" queryString>
  <TabItem value="SmallBank" label="SmallBank" default>
    SmallBank ベンチマークを実行するには、次のコマンドを実行します。`<PATH_TO_KELPIE>` を Kelpie ディレクトリへのパスに置き換えます。

    ```console
    /<PATH_TO_KELPIE>/bin/kelpie --config smallbank-benchmark-config.toml
    ```
  </TabItem>
  <TabItem value="TPC-C" label="TPC-C">
    TPC-C ベンチマークを実行するには、次のコマンドを実行します。`<PATH_TO_KELPIE>` を Kelpie ディレクトリへのパスに置き換えます。

    ```console
    /<PATH_TO_KELPIE>/bin/kelpie --config tpcc-benchmark-config.toml
    ```
  </TabItem>
  <TabItem value="YCSB" label="YCSB">
    YCSB ベンチマークを実行するには、次のコマンドを実行します。`<PATH_TO_KELPIE>` を Kelpie ディレクトリへのパスに置き換えます。

    ```console
    /<PATH_TO_KELPIE>/bin/kelpie --config ycsb-benchmark-config.toml
    ```
  </TabItem>
</Tabs>

さらに、次のオプションが利用可能です。

- `--only-pre`。証明書とコントラクトの登録、およびデータのロードのみを実行します。
- `--except-pre` 証明書とコントラクトの登録とデータのロードを行わずにジョブを実行します。

`--only-pre` オプションを使用して初期化が完了したら、`--except-pre` オプションを使用してベンチマークを複数回実行できます。

## 共通パラメータ

| 名前            | 説明                              | デフォルト |
|:---------------|:----------------------------------|:---------|
| `concurrency`  | ベンチマーク用のスレッドの数。         | `1`      |
| `run_for_sec`  | ベンチマークの継続時間 (秒単位)。      | `60`     |
| `ramp_for_sec` | ベンチマーク前の立ち上げ時間 (秒単位)。 | `0`      |

## ワークロード固有のパラメータ

ワークロードを選択すると、使用可能なパラメータが表示されます。

<Tabs groupId="benchmarks" queryString>
  <TabItem value="SmallBank" label="SmallBank" default>
    | 名前                | 説明                                      | デフォルト |
    |:-------------------|:------------------------------------------|:----------|
    | `num_accounts`     | ベンチマークの対象となる銀行口座の数。           | `100000` |
    | `load_concurrency` | ロードするスレッドの数。                      | `1`      |
    | `load_batch_size`  | 単一の読み込みトランザクション内のアカウントの数。 | `1`      |
  </TabItem>
  <TabItem value="TPC-C" label="TPC-C">
    | 名前                | 説明                                    | デフォルト |
    |:-------------------|:----------------------------------------|:---------|
    | `num_warehouses`   | ベンチマーク用の倉庫の数 (スケールファクター)。 | `1`      |
    | `rate_payment`     | 支払いトランザクションの割合。               | `50`     |
    | `load_concurrency` | ロードするスレッドの数。                    | `1`      |
  </TabItem>
  <TabItem value="YCSB" label="YCSB">
    | 名前                | 説明                                   | デフォルト |
    |:-------------------|:---------------------------------------|:---------|
    | `record_count`     | ベンチマークのレコード数。                 | `1000`   |
    | `payload_size`     | 各レコードのペイロードサイズ (バイト単位)。  | `1000`   |
    | `ops_per_tx`       | 単一トランザクション内の操作の数。           | `2`      |
    | `workload`         | ワークロードのタイプ (A、C、または F)。     | `A`      |
    | `load_concurrency` | ロードするスレッドの数。                   | `1`      |
    | `load_batch_size`  | 単一のロードトランザクション内のレコードの数。 | `1`      |
  </TabItem>
</Tabs>
